--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <title> ITMD-361 Lab-4 </title>
 </head>
 <body>
-<h1>v=Volunteer Form</h1>
+<h1>Volunteer Form</h1>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
   <fieldset>
     <legend>My info</legend>
-	  <div><label> First name:<input type="text" </label></div>
+	  <div><label> First name:<input size="100" type="text" </label></div>
 </body>
 </html>
