--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
   <fieldset>
     <legend>My info</legend>
-	  <div><label> First name:<input size="100" type="text" </label></div>
+	  <div><label> First name:<input size="100" type="text" name="first_name_field"></label></div>
+	  <div><label> Last name: <input size="100" type="text" name="last_name_field"></label></div>
+	  <div><label> Email: <input size="100" type="text" name="email_field"></label></div>
+	  <div><label>Phone Number: <input size="100" type="text" name="phone_field"></label></div>
 </body>
 </html>
