--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	  <div><label> Last name: <input size="100" type="text" name="last_name_field"></label></div>
 	  <div><label> Email: <input size="100" type="text" name="email_field"></label></div>
 	  <div><label>Phone Number: <input size="100" type="text" name="phone_field"></label></div>
+	  <div>Gender:</div>
+	  <div>
+	    <label> Male <input type="radio" name="gender_field" value="male"></label>
+	    <label> Female <input type="radio" name="gender_field" value="male"></label>
 </form>
 </body>
 </html>
