--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title> ITMD-361 Lab-4 </title>
+<title>Document</title>
 </head>
 <body>
 <h1>Volunteer Form</h1>
