--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Document</title>
+<title>ITMD-361 Lab 4</title>
 </head>
 <body>
 <h1>Volunteer Form</h1>
@@ -24,6 +24,23 @@
 	  <option>above 18</option>
 	</select>
 	</fieldset>
+	<fieldset>
+	  <legend> My Availability </legend>
+	  <h3>Days Available<h3>
+	  <div>
+	  	<div><label> Sunday <input type="checkbox" name="avilable_field[]" value=sunday></label></div>
+	  	<div><label> Monday <input type="checkbox" name="avilable_field[]" value=monday></label></div>
+	  	<div><label> Tuesday <input type="checkbox" name="avilable_field[]" value=tuesday></label></div> 
+	  	<div><label> Wednesday <input type="checkbox" name="avilable_field[]" value=wednesday></label></div>
+	  	<div><label> Thursday <input type="checkbox" name="avilable_field[]" value=thursday></label></div>
+	  	<div><label> Friday <input type="checkbox" name="avilable_field[]" value=friday></label></div>
+	  	<div><label> Saturday <input type="checkbox" name="avilable_field[]" value=saturday></label></div>
+	  	<h3>Comments</h3>
+	  	<textarea name="comments_field"></textarea>
+	  </div>
+	</fieldset>
+	<input type="hidden" name="hidden_field" value="dkriegls">
+	<input type="submit">
 </form>
 </body>
 </html>
