--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <h1>Volunteer Form</h1>
-<form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
+<form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post" autocomplete="on">
   <fieldset>
     <legend>My Info</legend>
 	<div><label> First name:<input size="100" type="text" name="first_name_field"></label></div>
 	<div><label> Last name: <input size="100" type="text" name="last_name_field"></label></div>
-	<div><label> Email: <input size="100" type="text" name="email_field"></label></div>
+	<div><label> Email: <input size="100" type="email" name="email_field"></label></div>
 	<div><label>Phone Number: <input size="100" type="text" name="phone_field"></label></div>
 	<div>Gender:</div>
 	<div>
@@ -39,7 +39,7 @@
 	  	<textarea name="comments_field"></textarea>
 	  </div>
 	</fieldset>
-	<input type="hidden" name="hidden_field" value="dkriegls">
+	<input type="hidden" name="hidden_field" value="chaffner@hawk.iit.edu">
 	<input type="submit">
 </form>
 </body>
